# silverdom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/allocator/: CMakeLists.txt  allocator-example.c  allocator-test.c  allocator.c  allocator.h
src/code-stub/: CMakeLists.txt  stub.c
src/windows/: CMakeLists.txt  sd-win.cpp
